--- a/index.html
+++ b/index.html
@@ -41,12 +41,21 @@
               v-model.number="principal"
               name="principal"
               id="principal"
+              min="0"
+              required
             />
           </div>
 
           <div class="form-group" class="row">
             <label for="rate" class="col-md-4">Rate</label>
-            <input type="number" v-model.number="rate" name="rate" id="rate" />
+            <input
+              type="number"
+              v-model.number="rate"
+              name="rate"
+              id="rate"
+              min="0"
+              required
+            />
           </div>
           <div class="form-group" class="row">
             <label for="time" class="col-md-4">Time</label>
@@ -57,6 +66,7 @@
               name="time"
               id="time"
               min="0"
+              required
             />
           </div>
         </form>
